feat: add opengraph metadata for social sharing

--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -5,6 +5,20 @@
 		<link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Pianode</title>
+		
+		<!-- OpenGraph Meta Tags -->
+		<meta property="og:title" content="Pianode - Collaborative Piano" />
+		<meta property="og:description" content="Play piano online with your friends in real-time" />
+		<meta property="og:image" content="/images/pianode-og.png" />
+		<meta property="og:image:alt" content="Pianode Demo" />
+		<meta property="og:type" content="website" />
+		<meta property="og:site_name" content="Pianode" />
+		
+		<!-- Twitter Card Meta Tags -->
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:title" content="Pianode - Collaborative Piano" />
+		<meta name="twitter:description" content="Play piano online with your friends in real-time" />
+		<meta name="twitter:image" content="/images/pianode-og.png" />
 	</head>
 	<body>
 		<div id="root"></div>
